--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
             let assigned;
 
             if (currentMonth === 'November 2024') {
-                const ramIndex = availableNames.findIndex(name => name.toLowerCase() === 'Shristi Shakya');
+                const ramIndex = availableNames.findIndex(name => name.toLowerCase() === 'shristi shakya');
                 assigned = ramIndex !== -1 ? availableNames[ramIndex] : availableNames[Math.floor(Math.random() * availableNames.length)];
             } else if (currentMonth === 'December 2024') {
-                const shyamIndex = availableNames.findIndex(name => name.toLowerCase() === 'Sandip Bhatta');
+                const shyamIndex = availableNames.findIndex(name => name.toLowerCase() === 'sandip bhatta');
                 assigned = shyamIndex !== -1 ? availableNames[shyamIndex] : availableNames[Math.floor(Math.random() * availableNames.length)];
             } else {
                 assigned = availableNames[Math.floor(Math.random() * availableNames.length)];
