--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                 ctx.fillStyle = '#333';
                                 ctx.font = 'bold 16px Arial';
                                 
-                                const textRadius = radius * 0.7;
+                                const textRadius = radius *.9;
                                 ctx.fillText(label, textRadius, 0);
                                 
                                 ctx.restore();
